Setup debian branch for LSSOL building

--- a/debian/control
+++ b/debian/control
@@ -18,57 +18,11 @@ Build-Depends: debhelper (>= 9),
                librbdyn-dev,
                libsch-core-dev,
 # Uncomment the following line to build with LSSOL support
-#               libeigen-lssol-dev,
+               libeigen-lssol-dev,
                libeigen-qld-dev
 
-Package: libtasks-qld-dev
-Provides: libtasks-dev
-Section: libdevel
-Architecture: any
-Depends: pkg-config,
-         libeigen3-dev (>= 3.2),
-         libspacevecalg-dev,
-         librbdyn-dev,
-         libsch-core-dev,
-         libeigen-qld-dev,
-         libtasks-qld0 (= ${binary:Version}),
-         ${misc:Depends}
-Suggests: libtasks-qld-doc
-Description: tasks - development files
- The Tasks library is designed to make real-time control for
- kinematics tree and list of kinematics tree.
- .
- This package contains development files (headers and shared library
- symbolic link).
-
-
-Package: libtasks-qld0
-Provides: libtasks0
-Section: libs
-Architecture: any
-Depends: ${shlibs:Depends},
-         ${misc:Depends}
-Description: tasks: real-time control
- The Tasks library is designed to make real-time control for
- kinematics tree and list of kinematics tree.
-
-Package: libtasks-qld-doc
-Provides: libtasks-doc
-Section: doc
-Architecture: all
-Depends: ${misc:Depends}
-Multi-Arch: foreign
-Suggests: libtasks-dev
-Description: tasks API documentation
- The Tasks library is designed to make real-time control for
- kinematics tree and list of kinematics tree.
- .
- This package provides the complete API documentation in HTML format.
-
-# Uncomment the following lines to build LSSOL packages (non-free)
-#Package: libtasks-lssol-dev
+#Package: libtasks-qld-dev
 #Provides: libtasks-dev
-#Replaces: libtasks-qld-dev
 #Section: libdevel
 #Architecture: any
 #Depends: pkg-config,
@@ -76,10 +30,10 @@ Description: tasks API documentation
 #         libspacevecalg-dev,
 #         librbdyn-dev,
 #         libsch-core-dev,
-#         libeigen-lssol-dev,
-#         libtasks-lssol0 (= ${binary:Version}),
+#         libeigen-qld-dev,
+#         libtasks-qld0 (= ${binary:Version}),
 #         ${misc:Depends}
-#Suggests: libtasks-lssol-doc
+#Suggests: libtasks-qld-doc
 #Description: tasks - development files
 # The Tasks library is designed to make real-time control for
 # kinematics tree and list of kinematics tree.
@@ -88,9 +42,8 @@ Description: tasks API documentation
 # symbolic link).
 #
 #
-#Package: libtasks-lssol0
+#Package: libtasks-qld0
 #Provides: libtasks0
-#Replaces: libtasks-qld0
 #Section: libs
 #Architecture: any
 #Depends: ${shlibs:Depends},
@@ -99,9 +52,8 @@ Description: tasks API documentation
 # The Tasks library is designed to make real-time control for
 # kinematics tree and list of kinematics tree.
 #
-#Package: libtasks-lssol-doc
+#Package: libtasks-qld-doc
 #Provides: libtasks-doc
-#Replaces: libtasks-qld-doc
 #Section: doc
 #Architecture: all
 #Depends: ${misc:Depends}
@@ -112,3 +64,51 @@ Description: tasks API documentation
 # kinematics tree and list of kinematics tree.
 # .
 # This package provides the complete API documentation in HTML format.
+
+# Uncomment the following lines to build LSSOL packages (non-free)
+Package: libtasks-lssol-dev
+Provides: libtasks-dev
+Replaces: libtasks-qld-dev
+Section: libdevel
+Architecture: any
+Depends: pkg-config,
+         libeigen3-dev (>= 3.2),
+         libspacevecalg-dev,
+         librbdyn-dev,
+         libsch-core-dev,
+         libeigen-lssol-dev,
+         libtasks-lssol0 (= ${binary:Version}),
+         ${misc:Depends}
+Suggests: libtasks-lssol-doc
+Description: tasks - development files
+ The Tasks library is designed to make real-time control for
+ kinematics tree and list of kinematics tree.
+ .
+ This package contains development files (headers and shared library
+ symbolic link).
+
+
+Package: libtasks-lssol0
+Provides: libtasks0
+Replaces: libtasks-qld0
+Section: libs
+Architecture: any
+Depends: ${shlibs:Depends},
+         ${misc:Depends}
+Description: tasks: real-time control
+ The Tasks library is designed to make real-time control for
+ kinematics tree and list of kinematics tree.
+
+Package: libtasks-lssol-doc
+Provides: libtasks-doc
+Replaces: libtasks-qld-doc
+Section: doc
+Architecture: all
+Depends: ${misc:Depends}
+Multi-Arch: foreign
+Suggests: libtasks-dev
+Description: tasks API documentation
+ The Tasks library is designed to make real-time control for
+ kinematics tree and list of kinematics tree.
+ .
+ This package provides the complete API documentation in HTML format.
